# pCRscore

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-package.yml
src/pCRscore/: __init__.py  common.py  discovery_svm.py  pipeline.py  svm.py
tests/: test_discovery_svm.py  test_pipeline.py  test_svm.py  test_validation_svm.py
